# stm32hal-sdio-issue

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
